# Web-Of-Trust

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
node/src/chain_spec/: gen_genesis_data.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  weights.rs
