[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
repository = "https://github.com/TOV-Protocol/TOVProtocol"
license = "MIT-0"
homepage = "https://github.com/TOV-Protocol/TOVProtocol"
version = '1.0.0'

[workspace]
resolver = "2"

members = [
    'node',
    'pallets/template',
	'pallets/authority-members',
	'pallets/certification',
	'pallets/distance',
	'pallets/duniter-test-parameters',
    'pallets/duniter-test-parameters/macro',
    'pallets/duniter-wot',
	'pallets/identity',
	'pallets/membership',
	'pallets/oneshot-account',
    'pallets/quota',
	'pallets/smith-members',
	'pallets/upgrade-origin',
	'primitives/distance',
    'primitives/membership',
	'resources/weight_analyzer',
    'runtime',
]

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false }
scale-info = { version = "2.11.0", default-features = false }
countmap = { version = "0.2.0", default-features = false }
ctrlc = { version = "3.4.4", default-features = false }
cucumber = { version = "0.20.2", default-features = false }
env_logger = { version = "0.11.3", default-features = false }
notify = { version = "6.1.1", default-features = false }
portpicker = { version = "0.1.1", default-features = false }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
async-io = { version = "2.3.1", default-features = false }
async-trait = { version = "0.1.78", default-features = false }
thiserror = { version = "1.0.58", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false }
graphql_client = { version = "0.13.0" }
bs58 = { version = "0.5.1", default-features = false }
placeholder = { version = "1.1.4", default-features = false }
getrandom = { version = "0.2.12", default-features = false }
clap = { version = "4.5.3" }
clap_complete = { version = "4.5.1" }
reqwest = { version = "0.12.0", default-features = false }
glob = { version = "0.3.1", default-features = false }
convert_case = { version = "0.6.0", default-features = false }
subweight-core = { version = "3.3.1", default-features = false }
version_check = { version = "0.9.4", default-features = false }
enum-as-inner = { version = "=0.5.1", default-features = false }                        #https://github.com/bluejekyll/trust-dns/issues/1946
futures = { version = "0.3.30", default-features = false }
tera = { version = "1", default-features = false }
hex = { version = "0.4.3", default-features = false }
jsonrpsee = { version = "0.22", default-features = false } # Version should exactly match polkadot one
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.21", default-features = false }
maplit = { version = '1.0.2', default-features = false }
proc-macro2 = { version = '1.0.79', default-features = false }
quote = { version = '1.0.35', default-features = false }
syn = { version = '2.0.53', default-features = false }
memmap2 = { version = "0.9.4", default-features = false }
num-format = { version = "0.4.4", default-features = false }
smallvec = { version = "1.13.2", default-features = false }
hex-literal = { version = '0.4.1', default-features = false }
scale-value = { version = "0.14.1", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_derive = { version = "1.0.197", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
fnv = { version = "1.0.7", default-features = false }
tokio = { version = "1.36.0", default-features = false }
time = { version = "0.3.34", default-features = false }
time-macros = { version = "0.2.17", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
rayon = { version = "1.9.0", default-features = false }
simple_logger = { version = "4.3.3", default-features = false }
bincode = { version = "1.3.3", default-features = false }
dubp-wot = { version = "0.11.1", default-features = false }
flate2 = { version = "1.0.28", default-features = false }
anyhow = { version = "1.0.81", default-features = false }

# Subxt
subxt = { git = 'https://github.com/TOV-Protocol/subxt', branch = 'subxt-v0.35.3-tov-substrate-v1.11.0', default-features = false }

# local dependencies
duniter-primitives = { path = 'primitives/duniter', default-features = false }
weight-analyzer = { path = "resources/weight_analyzer", default-features = false }
pallet-authority-members = { path = 'pallets/authority-members', default-features = false }
pallet-certification = { path = 'pallets/certification', default-features = false }
pallet-distance = { path = "pallets/distance", default-features = false }
pallet-duniter-account = { path = 'pallets/duniter-account', default-features = false }
pallet-duniter-test-parameters = { path = 'pallets/duniter-test-parameters', default-features = false }
pallet-duniter-test-parameters-macro = { path = 'pallets/duniter-test-parameters/macro', default-features = false }
pallet-duniter-wot = { path = 'pallets/duniter-wot', default-features = false }
pallet-identity = { path = 'pallets/identity', default-features = false }
pallet-membership = { path = 'pallets/membership', default-features = false }
pallet-offences = { path = 'pallets/offences', default-features = false }
pallet-oneshot-account = { path = 'pallets/oneshot-account', default-features = false }
pallet-provide-randomness = { path = 'pallets/provide-randomness', default-features = false }
pallet-quota = { path = 'pallets/quota', default-features = false }
pallet-session-benchmarking = { path = 'pallets/session-benchmarking', default-features = false }
pallet-smith-members = { path = 'pallets/smith-members', default-features = false }
pallet-upgrade-origin = { path = 'pallets/upgrade-origin', default-features = false }
sp-distance = { path = 'primitives/distance', default-features = false }
sp-membership = { path = 'primitives/membership', default-features = false }

# substrate dependencies
frame-benchmarking = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
frame-executive = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
frame-support = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
frame-system = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
frame-try-runtime = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-atomic-swap = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-authority-discovery = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-authorship = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-babe = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-balances = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-collective = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-grandpa = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-im-online = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-multisig = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-preimage = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-proxy = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-scheduler = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-session = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-sudo = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-timestamp = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-treasury = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
pallet-utility = { git = "https://github.com/TOV-Protocol/base-polkadot-sdk", branch = "tov-substrate-v1.11.0", default-features = false }
sp-api = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-arithmetic = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-block-builder = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-client-db = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-client-api = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-consensus-grandpa = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-consensus-babe = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-consensus-babe-rpc = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-blockchain = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-offchain = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-consensus-babe = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-consensus-grandpa = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-core = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-inherents = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-offchain = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-runtime = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-session = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-std = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-staking = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-weights = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-transaction-pool = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-version = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-cli = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-service = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-trie = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-authority-discovery = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-genesis-builder = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-keyring = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-consensus = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-core-hashing = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-keystore = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-rpc-api = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
substrate-wasm-builder = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-io = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
substrate-build-script-utils = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0' }
node-primitives = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
frame-benchmarking-cli = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-chain-spec = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-consensus = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-consensus-manual-seal = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-executor = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-telemetry = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-transaction-pool = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-basic-authorship = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-network = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-keystore = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-storage = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-timestamp = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-transaction-storage-proof = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sc-transaction-pool-api = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
sp-state-machine = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }
substrate-frame-rpc-system = { git = 'https://github.com/TOV-Protocol/base-polkadot-sdk', branch = 'tov-substrate-v1.11.0', default-features = false }

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[profile.release]
# Link Time Optimization
lto = "thin"
# Substrate runtime requires unwinding.
panic = "unwind"
